--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -18,6 +18,5 @@
   "REMEMBER_ME": "Remember me",
   "FORGOT_PWD": "Forgot your password?",
   "FOOTER_CREATED_BY": "Created by Imatia Innovation",
-  "FOOTER_RIGHTS": "All rights reserved",
-  "PRODUCTS": "Products"
+  "FOOTER_RIGHTS": "All rights reserved"
 }
