--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -18,6 +18,5 @@
   "REMEMBER_ME": "Recuérdame",
   "FORGOT_PWD": "¿Has olvidado tu contraseña?",
   "FOOTER_CREATED_BY": "Creado por Imatia Innovation",
-  "FOOTER_RIGHTS": "Todos los derechos reservados",
-  "PRODUCTS": "Productos"
+  "FOOTER_RIGHTS": "Todos los derechos reservados"
 }
