--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -19,5 +19,9 @@
   "FORGOT_PWD": "Forgot your password?",
   "FOOTER_CREATED_BY": "Created by Imatia Innovation",
   "FOOTER_RIGHTS": "All rights reserved",
-  "PRODUCTS": "Products"
+  "PRODUCTS": "Products",
+  "MYPROFILE": "My profile",
+  "MYDATA": "Personal data",
+  "MYPRODUCTS": "My oferted products"
+
 }
