--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -19,5 +19,8 @@
   "FORGOT_PWD": "¿Has olvidado tu contraseña?",
   "FOOTER_CREATED_BY": "Creado por Imatia Innovation",
   "FOOTER_RIGHTS": "Todos los derechos reservados",
-  "PRODUCTS": "Productos"
+  "PRODUCTS": "Productos",
+  "MYPROFILE": "Mi perfil",
+  "MYDATA": "Datos personales",
+  "MYPRODUCTS": "Mis productos ofertados"
 }
