Vista "Mi Perfil" funcionando :+1:

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -22,6 +22,12 @@
   "PRODUCTS": "Products",
   "MYPROFILE": "My profile",
   "MYDATA": "Personal data",
-  "MYPRODUCTS": "My oferted products"
+  "MYPRODUCTS": "My oferted products",
+  "NAME": "Name",
+  "SURNAME": "Surname",
+  "NICKNAME": "Nickname",
+  "EMAIL": "Email",
+  "CAMERA": "Camera",
+  "LOCATION": "Location"
 
 }
