Formulario detalles mas o menos

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
   "price": "Price",
   "status": "Status",
   "product_type": "Product type",
-  "avaliable": "Avaliable"
+  "avaliable": "Avaliable",
+  "plocation": "Location"
 
 }
