Pre-me voy a cargar productDetails

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -37,6 +37,10 @@
   "avaliable": "Avaliable",
   "plocation": "Location",
   "statusname": "Status",
-  "tuser_user_":"User"
+  "tuser_user_":"User",
+  "PHOTO": "Photo",
+  "Excelente": "Excelent",
+  "Correcto": "Correct",
+  "Muy bueno": "Very good"
 
 }
