ProductDetail en forma de dialog
-ProductDetail ha vuelto! y en forma de chapa!
-Traducciones decentes de productDetail y productHome
-Simbolo segun el campo "avaliable"
-(Pendiente de crear tabla product_type(hay que modificar tambien el ProductDao.xml))

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
   "FORGOT_PWD": "Forgot your password?",
   "FOOTER_CREATED_BY": "Created by Imatia Innovation",
   "FOOTER_RIGHTS": "All rights reserved",
+  "PRODUCT": "Product",
   "PRODUCTS": "Products",
   "MYPROFILE": "My profile",
   "MYDATA": "Personal data",
