--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -20,6 +20,7 @@
   "FOOTER_CREATED_BY": "Creado por Imatia Innovation",
   "FOOTER_RIGHTS": "Todos los derechos reservados",
   "PRODUCTS": "Productos",
+  "PRODUCT": "Producto",
   "MYPROFILE": "Mi perfil",
   "MYDATA": "Datos personales",
   "MYPRODUCTS": "Mis productos ofertados",
