Estilos de ProductDetails

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -45,6 +45,8 @@
   "SOUND": "Sound",
   "VIDEO": "Video",
   "PHOTO": "Photo",
-  "pdetails": "Other details"
+  "pdetails": "Other details",
+  "from": "from",
+  "day": "day"
 
 }
