--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -45,5 +45,7 @@
   "SOUND": "Sonido",
   "VIDEO": "Video",  
   "PHOTO": "Fotografía",
-  "pdetails": "Otros detalles"
+  "pdetails": "Otros detalles",
+  "from": "desde",
+  "day": "dia"
 }
