--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
   "PHOTO": "Photo",
   "pdetails": "Other details",
   "from": "from",
-  "day": "day"
+  "day": "day",
+  "YOUR DATA": "Your data"
 
 }
