--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -47,5 +47,6 @@
   "PHOTO": "Fotografía",
   "pdetails": "Otros detalles",
   "from": "desde",
-  "day": "dia"
+  "day": "dia",
+  "YOUR DATA": "Tus datos"
 }
