Traduccion label productos y border-radius de productDetail

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -48,6 +48,7 @@
   "pdetails": "Other details",
   "from": "from",
   "day": "day",
-  "YOUR DATA": "Your data"
+  "YOUR DATA": "Your data",
+  "PRODUCTS TITLE": "Products for rent"
 
 }
