--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -48,5 +48,6 @@
   "pdetails": "Otros detalles",
   "from": "desde",
   "day": "dia",
-  "YOUR DATA": "Tus datos"
+  "YOUR DATA": "Tus datos",
+  "PRODUCTS TITLE": "Productos en alquiler"
 }
