Revision de login

--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -17,7 +17,7 @@
   "ERROR_USER_PASS_INCORRECT": "Usuario o contraseña incorrecta",
   "REMEMBER_ME": "Recuérdame",
   "FORGOT_PWD": "¿Has olvidado tu contraseña?",
-  "FOOTER_CREATED_BY": "Creado por CameraRent Innovation",
+  "FOOTER_CREATED_BY": "Creado por CameraRent S.A",
   "FOOTER_RIGHTS": "Todos los derechos reservados",
   "PRODUCTS": "Productos",
   "PRODUCT": "Producto",
@@ -38,12 +38,12 @@
   "avaliable": "Disponible",
   "plocation": "Localización",
   "statusname": "Estado",
-  "tuser_user_":"Usuario",
+  "tuser_user_": "Usuario",
   "Excelente": "Excelente",
   "Correcto": "Correcto",
   "Muy bueno": "Muy bueno",
   "SOUND": "Sonido",
-  "VIDEO": "Video",  
+  "VIDEO": "Video",
   "PHOTO": "Fotografía",
   "pdetails": "Otros detalles",
   "from": "desde",
@@ -51,5 +51,6 @@
   "YOUR DATA": "Tus datos",
   "PRODUCTS TITLE": "Productos en alquiler",
   "LIGHT": "Claro",
-  "DARK": "Oscuro"
+  "DARK": "Oscuro",
+  "PAGE_TITLE": "CAMERA RENT"
 }
