--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -52,5 +52,8 @@
   "PRODUCTS TITLE": "Products for rent",
   "LIGHT": "Light",
   "DARK": "Dark",
-  "PAGE_TITLE": "CAMERA RENT"
+  "PAGE_TITLE": "CAMERA RENT",
+  "CONFIRM": "Confirm",
+  "pick a date": "Pick dates",
+  "request_text": "Text"
 }
