--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -55,5 +55,7 @@
   "PAGE_TITLE": "CAMERA RENT",
   "CONFIRM": "Confirmar",
   "pick a date" : "Escoge fechas",
-  "request_text": "Escrive un comentario"
+  "request_text": "Escrive un comentario",
+  "INPUT.BUTTON.DATERANGE": "Fechas",
+  "DATERANGE.APPLYLABEL": "Seleciona Fechas"
 }
