Mis reservas funcional
-Función que rechaza la reservas que entran en conflicto con la que se va a confirmar

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -51,6 +51,7 @@
   "YOUR DATA": "Your data",
   "PRODUCTS TITLE": "Products for rent",
   "LIGHT": "Light",
-  "DARK": "Dark"
+  "DARK": "Dark",
+  "MYRENTALS": "My rents"
 
 }
