--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -51,5 +51,6 @@
   "YOUR DATA": "Tus datos",
   "PRODUCTS TITLE": "Productos en alquiler",
   "LIGHT": "Claro",
-  "DARK": "Oscuro"
+  "DARK": "Oscuro",
+  "MYRENTALS": "Mis peticiones"
 }
