--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -47,7 +47,7 @@
   "PHOTO": "Fotografía",
   "pdetails": "Otros detalles",
   "from": "desde",
-  "day": "dia",
+  "day": "día",
   "YOUR DATA": "Tus datos",
   "PRODUCTS TITLE": "Productos en alquiler",
   "LIGHT": "Claro",
