--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -47,10 +47,10 @@
   "PHOTO": "Fotografía",
   "pdetails": "Otros detalles",
   "from": "desde",
-  "day": "dia",
+  "day": "día",
   "YOUR DATA": "Tus datos",
-  "PRODUCTS TITLE": "Productos en alquiler",
+  "PRODUCTS TITLE": "Busca un equipo cerca de ti",
   "LIGHT": "Claro",
   "DARK": "Oscuro",
-  "PAGE_TITLE": "CAMERA RENT"
+  "PAGE_TITLE": "ALquiler de equipos audiovisuales a particulares y empresas cerca de ti"
 }
