Traducciones my-rental

--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -52,5 +52,25 @@
   "PRODUCTS TITLE": "Productos en alquiler",
   "LIGHT": "Claro",
   "DARK": "Oscuro",
-  "MYRENTALS": "Mis peticiones"
+  "MYRENTALS": "Mis peticiones",
+  "CONFIRM": "Confirmar",
+  "pick a date" : "Escoge fechas",
+  "request_text": "Comentario",
+  "INPUT.BUTTON.DATERANGE": "Fechas",
+  "DATERANGE.APPLYLABEL": "Seleciona fechas",
+  "start_date": "Inicio alquiler",
+  "end_date": "Fin alquiler",
+  "state": "Estado",
+  "profit": "Beneficio",
+  "pending": "Pendiente",
+  "applied": "Aceptado",
+  "canceled": "Cancelado",
+  "denied": "Denegado",
+  "Apply": "Aceptar",
+  "Deny": "Denegar",
+  "r_user": "Solicitante",
+  "r_phone": "Teléfono",
+  "p_user": "Ofertante",
+  "p_phone": "Teléfono",
+  "profit_diff":"Diferencia"
 }
