--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -71,7 +71,10 @@
   "r_user": "Applicant",
   "r_phone": "Telephone",
   "p_user": "Offeror",
-  "p_phone": "Teléfono",
-  "profit_diff":"Difference"
+  "p_phone": "Telephone",
+  "phone":"Telephone",
+  "profit_diff":"Difference",
+  "cancelBtn": "Cancel button",
+  "MYRENTALS": "My rentals"
 
 }
