--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -75,5 +75,7 @@
   "profit_diff": "Difference",
   "cancelBtn": "Cancel button",
   "MYRENTALS": "My rentals",
-  "PAGE_TITLE": "Audiovisual equipment rental to individuals and companies near you"
+  "PAGE_TITLE": "Audiovisual equipment rental to individuals and companies near you",
+  "COST": "Cost",
+  "RENT": "Rent"
 }
