Avance en estilos y traducción

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
-  "APP_TITLE": "Quickstart",
+  "APP_TITLE": "JEE Seed",
   "VERSION": "Version",
-  "EXAMPLE_LOGIN_INFO": "Use this user and password for login",
+  "EXAMPLE_LOGIN_INFO": "Example Username and Password",
   "USERNAME": "Username",
   "PASSWORD": "Password",
   "LOGIN": "Login",
@@ -10,57 +10,57 @@
   "HOME": "Home",
   "LOGIN_TITLE": "Log in to your account",
   "ERROR_REQUIRED_FIELD": "Field is required",
-  "ERROR_MIN_LENGTH_REQUIRED": "The value length entered must be at least 8 characters.",
-  "ERROR_SESSION_EXPIRED": "Session expired",
+  "ERROR_MIN_LENGTH_REQUIRED": "The entered value must be at least 8 characters long",
+  "ERROR_SESSION_EXPIRED": "Session has expired",
   "ERROR_USER_REQUIRED": "Incorrect username",
   "ERROR_PASS_REQUIRED": "Incorrect password",
-  "ERROR_USER_PASS_INCORRECT": "Invalid username or password",
-  "REMEMBER_ME": "Remember me",
+  "ERROR_USER_PASS_INCORRECT": "Incorrect username or password",
+  "REMEMBER_ME": "Remember Me",
   "FORGOT_PWD": "Forgot your password?",
-  "FOOTER_CREATED_BY": "Created by CameraRent Innovation",
+  "FOOTER_CREATED_BY": "Created by CameraRent S.A",
   "FOOTER_RIGHTS": "All rights reserved",
-  "PRODUCT": "Product",
   "PRODUCTS": "Products",
-  "MYPROFILE": "My profile",
-  "MYDATA": "Personal data",
-  "MYPRODUCTS": "My oferted products",
+  "PRODUCT": "Product",
+  "MYPROFILE": "My Profile",
+  "MYDATA": "Personal Data",
+  "MYPRODUCTS": "My Offered Products",
   "NAME": "Name",
   "SURNAME": "Surname",
-  "NICKNAME": "Nickname",
+  "NICKNAME": "Username",
   "EMAIL": "Email",
   "CAMERA": "Camera",
   "LOCATION": "Location",
-  "main_photo": "Main photo",
-  "product_name": "Product name",
+  "main_photo": "Main Photo",
+  "product_name": "Product Name",
   "price": "Price",
   "status": "Status",
-  "product_type": "Product type",
-  "avaliable": "Avaliable",
+  "product_type": "Product Type",
+  "avaliable": "Available",
   "plocation": "Location",
   "statusname": "Status",
   "tuser_user_": "User",
-  "Excelente": "Excelent",
-  "Correcto": "Correct",
-  "Muy bueno": "Very good",
+  "Excelente": "Excellent",
+  "Correcto": "Good",
+  "Muy bueno": "Very Good",
   "SOUND": "Sound",
   "VIDEO": "Video",
-  "PHOTO": "Photo",
-  "pdetails": "Other details",
+  "PHOTO": "Photography",
+  "pdetails": "Other Details",
   "from": "from",
   "day": "day",
-  "YOUR DATA": "Your data",
-  "PRODUCTS TITLE": "Products for rent",
+  "YOUR DATA": "Your Data",
+  "PRODUCTS TITLE": "Find equipment near you",
   "LIGHT": "Light",
   "DARK": "Dark",
   "CONFIRM": "Confirm",
-  "pick a date": " Choose dates",
-  "request_text": "Comment",
+  "pick a date": "Choose Dates",
+  "request_text": "Write a comment",
   "INPUT.BUTTON.DATERANGE": "Dates",
-  "DATERANGE.APPLYLABEL": "Select dates",
-  "start_date": "Start",
-  "end_date": "End of rent",
-  "state": "Status",
-  "profit": "Benefit",
+  "DATERANGE.APPLYLABEL": "Select Dates",
+  "start_date": "Rental Start",
+  "end_date": "Rental End",
+  "state": "State",
+  "profit": "Profit",
   "pending": "Pending",
   "applied": "Accepted",
   "canceled": "Canceled",
@@ -68,13 +68,13 @@
   "Apply": "Accept",
   "Deny": "Deny",
   "r_user": "Applicant",
-  "r_phone": "Telephone",
-  "p_user": "Offeror",
-  "p_phone": "Telephone",
-  "phone": "Telephone",
-  "profit_diff": "Difference",
-  "cancelBtn": "Cancel button",
-  "MYRENTALS": "My rentals",
+  "r_phone": "Phone",
+  "p_user": "Provider",
+  "p_phone": "Phone",
+  "phone": "Phone",
+  "profit_diff": "Profit Difference",
+  "cancelBtn": "Cancel Button",
+  "MYRENTALS": "My Requests",
   "PAGE_TITLE": "Audiovisual equipment rental to individuals and companies near you",
   "COST": "Cost",
   "RENT": "Rent"
