Barra centrada y traducciones

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -86,6 +86,7 @@
   "COMMENT":"Comment",
   "CONFLICTED RENTS": "Conflicted rents",
   "APPLY REQUEST": "Apply request",
-  "€/DAY":"€/day"
+  "€/DAY":"€/day",
+  "SEARCH_PLACEHOLDER": "Search on Camera Rent..."
 
 }
