--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -86,5 +86,6 @@
   "COMMENT":"Comentario",
   "CONFLICTED RENTS": "Peticiones en conflicto",
   "APPLY REQUEST": "Aceptar petición",
-  "€/DAY":"€/día"
+  "€/DAY":"€/día",
+  "SEARCH_PLACEHOLDER": "Buscar en Camera Rent..."
 }
