--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -87,5 +87,6 @@
   "CONFLICTED RENTS": "Peticiones en conflicto",
   "APPLY REQUEST": "Aceptar petición",
   "€/DAY":"€/día",
-  "SEARCH_PLACEHOLDER": "Buscar en Camera Rent..."
+  "SEARCH_PLACEHOLDER": "Buscar en Camera Rent...",
+  "USER_ALREADY_EXIST": "Nombre de usario ya existe"
 }
