--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -88,6 +88,8 @@
   "APPLY REQUEST": "Apply request",
   "€/DAY":"€/day",
   "SEARCH_PLACEHOLDER": "Search on Camera Rent...",
-  "STATISTICS": "Statistics"
+  "STATISTICS": "Statistics",
+  "to": "to",
+  "PROFIT BY MONTH": "Total by month"
 
 }
