--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -88,6 +88,27 @@
   "APPLY REQUEST": "Aceptar petición",
   "€/DAY":"€/día",
   "SEARCH_PLACEHOLDER": "Buscar en Camera Rent...",
-  "DATERANGE.last_month": "Ultimo mes",
-  "STATISTICS": "Estadisticas"
+  "STATISTICS": "Estadisticas",
+  "January": "Enero",
+  "February": "Febrero",
+  "March": "Marzo",
+  "April": "Abril",
+  "May": "Mayo",
+  "June": "Junio",
+  "July": "Julio",
+  "August": "Agosto",
+  "September": "Septiembre",
+  "October": "Octubre",
+  "November": "Noviembre",
+  "December": "Diciembre",
+  "to": "a",
+  "PROFIT BY MONTH": "Total por mes",
+  "DATERANGE.last_month": "Último mes",
+  "DATERANGE.today": "Hoy",
+  "DATERANGE.yesterday": "Ayer",
+  "DATERANGE.last_7days": "Última semana",
+  "DATERANGE.last_30days": "Últimos 30 días",
+  "DATERANGE.this_month": "Este mes",
+  "DATERANGE.this_year": "Este año"
+
 }
