--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -81,8 +81,8 @@
   "ALL": "Todas las categorias",
   "RENT_CANCEL_DIALOG_TITLE": "Cancelar petición",
   "Do you really want to accept?": "Deseas cancelar esta petición?",
-  "YOUR RENTAL REQUESTS": "Tus peticiones de alquiler",
-  "YOUR RENTALS": "Tus alquileres",
+  "YOUR RENTAL REQUESTS": "Lo que alquilo",
+  "YOUR RENTALS": "Lo que me alquilan",
   "COMMENT":"Comentario",
   "CONFLICTED RENTS": "Peticiones en conflicto",
   "APPLY REQUEST": "Aceptar petición",
