--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -81,8 +81,8 @@
   "ALL": "All categories",
   "RENT_CANCEL_DIALOG_TITLE": "Cancel request",
   "Do you really want to accept?": "Do you really want to accept?",
-  "YOUR RENTAL REQUESTS": "Your rental requests",
-  "YOUR RENTALS": "Your rentals",
+  "YOUR RENTAL REQUESTS": "What I rent",
+  "YOUR RENTALS": "What they rent me",
   "COMMENT":"Comment",
   "CONFLICTED RENTS": "Conflicted rents",
   "APPLY REQUEST": "Apply request",
