--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -110,7 +110,7 @@
   "DATERANGE.last_30days": "Últimos 30 días",
   "DATERANGE.this_month": "Este mes",
   "DATERANGE.this_year": "Este año",
-
   "USER_ALREADY_EXIST": "Nombre de usario ya existe",
-  "user_photo": "Foto perfil"
+  "user_photo": "Foto perfil",
+  "SECONDARY_IMAGES": "Secondary images"
 }
