--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -92,6 +92,7 @@
   "to": "to",
   "PROFIT BY MONTH": "Total by month",
   "USER_ALREADY_EXIST": "Nickname already exist",
-  "user_photo": "Profile photo"
+  "user_photo": "Profile photo",
+  "SECONDARY_IMAGES": "Secondary images"
 
 }
