--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -93,6 +93,7 @@
   "PROFIT BY MONTH": "Total by month",
   "USER_ALREADY_EXIST": "Nickname already exist",
   "user_photo": "Profile photo",
-  "SECONDARY_IMAGES": "Secondary images"
+  "SECONDARY_IMAGES": "Secondary images",
+  "Create new account": "Create new account"
 
 }
