Retirados gran parte de los important!

--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -23,7 +23,7 @@
   "PRODUCT": "Product",
   "MYPROFILE": "My Profile",
   "MYDATA": "Personal Data",
-  "MYPRODUCTS": "My Offered Products",
+  "MYPRODUCTS": "My Products",
   "NAME": "Name",
   "SURNAME": "Surname",
   "NICKNAME": "Username",
