--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -23,7 +23,7 @@
   "PRODUCT": "Producto",
   "MYPROFILE": "Mi perfil",
   "MYDATA": "Datos personales",
-  "MYPRODUCTS": "Mis productos ofertados",
+  "MYPRODUCTS": "Mis productos",
   "NAME": "Nombre",
   "SURNAME": "Apellido",
   "NICKNAME": "Nombre de usuario",
