--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
   "EMAIL": "Email",
   "CAMERA": "Camera",
   "LOCATION": "Location",
-  "main_photo": "Main Photo",
+  "main_photo": "Main image",
   "product_name": "Product Name",
   "price": "Price",
   "status": "Status",
@@ -94,6 +94,7 @@
   "USER_ALREADY_EXIST": "Nickname already exist",
   "user_photo": "Profile photo",
   "SECONDARY_IMAGES": "Secondary images",
-  "Create new account": "Create new account"
+  "Create new account": "Create new account",
+  "pimage": "New image"
 
 }
