--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -72,7 +72,7 @@
   "p_user": "Provider",
   "p_phone": "Phone",
   "phone": "Phone",
-  "profit_diff": "Total Difference",
+  "profit_diff": "Opportunity cost",
   "cancelBtn": "Cancel Button",
   "MYRENTALS": "My Requests",
   "PAGE_TITLE": "Audiovisual equipment rental to individuals and companies near you",
