--- a/camerafront/src/assets/i18n/es.json
+++ b/camerafront/src/assets/i18n/es.json
@@ -72,7 +72,7 @@
   "p_user": "Ofertante",
   "p_phone": "Teléfono",
   "phone": "Teléfono",
-  "profit_diff": "Diferencia del total",
+  "profit_diff": "Coste de oportunidad",
   "cancelBtn": "Botón cancelar",
   "MYRENTALS": "Mis solicitudes",
   "PAGE_TITLE": "Alquiler de equipos audiovisuales a particulares y empresas cerca de ti",
