--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -72,7 +72,7 @@
   "p_user": "Provider",
   "p_phone": "Phone",
   "phone": "Phone",
-  "profit_diff": "Opportunity cost",
+  "profit_diff": "Diference",
   "cancelBtn": "Cancel Button",
   "MYRENTALS": "My Requests",
   "PAGE_TITLE": "Audiovisual equipment rental to individuals and companies near you",
@@ -84,7 +84,7 @@
   "YOUR RENTAL REQUESTS": "What I rent",
   "YOUR RENTALS": "What they rent me",
   "COMMENT":"Comment",
-  "CONFLICTED RENTS": "Conflicted rents",
+  "CONFLICTED RENTS": "Denied reservations upon acceptance",
   "APPLY REQUEST": "Apply request",
   "€/DAY":"€/day",
   "SEARCH_PLACEHOLDER": "Search on Camera Rent...",
@@ -101,6 +101,7 @@
   "CONFLICTED PERIOD MESSAGE": "The selected period coincides with another reservation. Try another one, please.",
   "NO DATE ALERT": "Select date period. Please.",
   "REQUEST SUCCESS":"The request has been created successfully",
-  "SOMETHING WRONG" :"Something has gone wrong."
+  "SOMETHING WRONG" :"Something has gone wrong.",
+  "change": "Change"
 
 }
