--- a/camerafront/src/assets/i18n/en.json
+++ b/camerafront/src/assets/i18n/en.json
@@ -102,6 +102,7 @@
   "NO DATE ALERT": "Select date period. Please.",
   "REQUEST SUCCESS":"The request has been created successfully",
   "SOMETHING WRONG" :"Something has gone wrong.",
-  "change": "Change"
+  "change": "Change",
+  "APPLIED REQUEST": "Request accepted"
 
 }
